# DivorcePredictor

./: .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  config.py  create_model.py  gunicorn.conf.py  main.py  manage.py  pyproject.toml  requirements.txt  settings.ini  supervisord.conf
backend/backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/backend/core/: admin.py  models.py  permissions.py  tasks.py
backend/backend/core/migrations/: 0001_initial.py
backend/backend/divorces/: admin.py  models.py  serializers.py  urls.py  views.py
backend/backend/divorces/classifiers/: model.joblib
backend/backend/divorces/management/commands/: trainmodel.py
backend/backend/divorces/migrations/: 0001_initial.py
backend/classifiers/: model.joblib
backend/core/: admin.py  app.py  config.py  exceptions.py  models.py  tasks.py
backend/core/migrations/: 0001_initial.py
backend/data/: data.csv
backend/dependencies/: cache.py  rate_limiting.py
backend/divorces/: admin.py  apps.py  functions.py  models.py  serializers.py  urls.py  views.py
backend/divorces/classifiers/: model.joblib
backend/divorces/fixtures/: data.json
backend/divorces/management/commands/: trainmodel.py
backend/divorces/migrations/: 0001_initial.py
backend/libs/: cache.py  classifier.py  loaders.py
backend/routes/: __init__.py  divorces.py
backend/schemas/: __init__.py  answers.py
certbot/: cli.ini
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  (+1 more)
(+79 files in other folders)
