[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
    "uvicorn-worker>=0.4.0",
]
