[project]
name = "backend"
version = "0.1.0"
description = "The Divorce Predictor server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.138.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix-only = true

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = [
    "classifiers",
    "config",
    "dependencies",
    "libs",
    "routes",
    "schemas"
]
